# libtorch_custom_dataset

./: CMakeLists.txt  README.md  best_model.pt  classify.cpp  custom_dataset.h  data_to_csv.py  file_names.csv  main.cpp  model.h  train.cpp  utils.h
